# handmade_rust

./: Cargo.toml  README.md
Assets/: poo.bmpx  soldier_standing.bmpx  test_file.bmpx
src/: entity.rs  entity_manager.rs  language_layer.rs  main.rs  math.rs  win32_engine.rs
