[package]
name = "handmade_rust"
version = "0.1.0"
authors = ["13jon37 <jonlockllyr2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
kernel32-sys = "0.2.2"
rusty-xinput = "1.2.0"
libc = "0.2.*"	